--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -1,6 +1,8 @@
 @import './Dashboard.css';
 @import './Login.css';
 @import './PartnerVerification.css';
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 
 
 
