--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -4,6 +4,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 
+* {
+  box-sizing: border-box;
+}
 
 
 body  {
@@ -11,13 +14,15 @@ body  {
   justify-content: center; 
   align-items: center;  
   background: linear-gradient(to bottom right, #ffe0f0, #ffe9f5);
-  font-family: 'Comic Sans MS', 'Arial Rounded MT Bold', cursive;
+  font-family: "Dancing Script", cursive;
   margin: 0;
   padding: 0;
   width: 100vw;
   min-height: 100vh;
   box-sizing: border-box;
 }
+
+
 
 
 /* Responsive adjustments for tablets and mobiles */
@@ -27,6 +32,7 @@ body  {
   }
 
   .container {
+    
     width: 100%;
     max-width: 400px;  
     margin: auto;
