--- a/src/Styles/Login.css
+++ b/src/Styles/Login.css
@@ -20,6 +20,7 @@ h1, h2 {
   align-items: center;
   gap: 10px;
    font-family: "Dancing Script", cursive;
+   line-height: 1.2;
 }
 
 form {
@@ -32,7 +33,8 @@ label {
   text-align: left;
   color: #d63384;
   font-weight: bold;
-  font-size: 0.95rem;
+  font-size: 1.3rem;
+   font-family: "Dancing Script", cursive;
 }
 
 input[type="email"],
