--- a/src/Styles/Dashboard.css
+++ b/src/Styles/Dashboard.css
@@ -99,23 +99,24 @@ textarea::placeholder {
 @media (max-width: 480px) {
   .dashboard-container {
     max-width: 95%;
-    padding: 20px 15px;
+    padding: 50px 20px;
     margin: 20px auto;
+    
   }
 
   input,
   textarea {
-    font-size: 1rem;
+    font-size: 0.8rem !important;
     padding: 12px;
   }
 
   button,
   .logout-button {
     font-size: 1rem;
-    padding: 12px 20px;
+    padding: 15px 10px !important;
   }
 
   h2 {
-    font-size: 1.3rem;
+    font-size: 1.7rem;
   }
 }
