--- a/src/Styles/Dashboard.css
+++ b/src/Styles/Dashboard.css
@@ -94,6 +94,53 @@ textarea::placeholder {
   transform: scale(1.05);
 }
 
+.angy-level-section input[type="range"] {
+  width: 90%;
+  appearance: none; /* Remove default styling */
+  height: 8px;
+  background: linear-gradient(to right,#ffecf8 0%, #ff002b 100%); 
+  border-radius: 5px;
+  outline: none;
+}
+
+/* Chrome, Safari, Edge */
+.angy-level-section input[type="range"]::-webkit-slider-thumb {
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  background: #ff002f;
+  border-radius: 50%;
+  cursor: pointer;
+  border: none;
+}
+
+/* Firefox */
+.angy-level-section input[type="range"]::-moz-range-thumb {
+  width: 20px;
+  height: 20px;
+  background: #ff002f;
+  border-radius: 50%;
+  cursor: pointer;
+  border: none;
+}
+
+/* Firefox track */
+.angy-level-section input[type="range"]::-moz-range-track {
+  background: linear-gradient(to right, #ffecf8 0%, #ff002b 100%);
+  height: 8px;
+  border-radius: 5px;
+}
+.angy-level-section input[type="range"] {
+  width: 90%;
+  
+}
+
+.angy-level-section p {
+  font-weight: bold;
+  color: #ff002f;
+  font-size: 1.5rem;
+}
+
 
 /* Even smaller devices like phones */
 @media (max-width: 480px) {
