--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -20,11 +20,22 @@ body  {
   width: 100vw;
   min-height: 100vh;
   box-sizing: border-box;
-  
+  cursor: url('/cursor.png'), auto;
 }
 
 input, textarea {
   font-size: 16px;
+}
+
+a,
+button,
+input[type="button"],
+input[type="submit"],
+input[type="range"],
+label,
+.logout-button,
+[role="button"] {
+  cursor: url('/pointer.png'), pointer;
 }
 
 
