--- a/src/Styles/Login.css
+++ b/src/Styles/Login.css
@@ -4,7 +4,7 @@
 .container {
   max-width: 450px;
   margin: 60px auto;
-  background-color: #fff0f6;
+  background-color: #fff0f669;
   padding: 50px;
   border-radius: 20px;
   box-shadow: 0 0 20px rgba(246, 41, 143, 0.499) !important;
