--- a/src/Styles/Login.css
+++ b/src/Styles/Login.css
@@ -1,10 +1,8 @@
-/* src/pages/Login.css */
-
 
 .container {
   max-width: 450px;
   margin: 60px auto;
-  background-color: #fff0f669;
+  background-color: #fff0f669 !important;
   padding: 50px;
   border-radius: 20px;
   box-shadow: 0 0 20px rgba(246, 41, 143, 0.499) !important;
@@ -91,6 +89,7 @@ button:hover {
     max-width: 95%;
     padding: 40px 35px !important;
     margin: 20px auto;
+    background-color: #fff0f669 !important;
   }
 
   input[type="email"],
