--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -7,6 +7,7 @@
 
 * {
   box-sizing: border-box;
+  
 }
 
 
@@ -14,7 +15,7 @@ body  {
    display: flex;
   justify-content: center; 
   align-items: center;  
-  background: linear-gradient(to bottom right, #ffe0f0, #ffe9f5);
+  background: #ffe0f0;
   font-family: "Dancing Script", cursive;
   margin: 0;
   padding: 0;
