--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -10,6 +10,14 @@
   
 }
 
+html, body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden; 
+  overflow-y: auto;   
+}
+
+
 
 body  {
    display: flex;
