--- a/src/Styles/App.css
+++ b/src/Styles/App.css
@@ -17,6 +17,26 @@ html, body {
   overflow-y: auto;   
 }
 
+/* Custom Scrollbar */
+body::-webkit-scrollbar {
+  width: 12px;  
+  height: 12px; 
+}
+
+body::-webkit-scrollbar-track {
+  background: #ffe0f0; 
+  border-radius: 10px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: #800020; 
+  border-radius: 10px;
+  border: 3px solid #ffe0f0; 
+}
+
+body::-webkit-scrollbar-thumb:hover {
+  background-color: #a00030; 
+}
 
 
 body  {
